--- a/ImageClassification_SVHN Dataset.ipynb
+++ b/ImageClassification_SVHN Dataset.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Project 8 - Neural Networks (SVHN dataset)"
+    "Neural Networks (SVHN dataset)"
    ]
   },
   {
