--- a/ImageClassification_SVHN Dataset.ipynb
+++ b/ImageClassification_SVHN Dataset.ipynb
@@ -32,10 +32,8 @@
     "This file format is commonly used in fields like medicine, aerospace, physics, engineering, finance, academic research, genomics, astronomy, electronics instruments.\n",
     "\n",
     "\n",
-    "Project Objectives:\n",
-    "\n",
-    "The objective of the project is to learn how to implement a simple image classification pipeline based on the k-Nearest Neighbour and a deep neural network.\n",
-    "\n",
+    "Objectives:\n",
+    
     "● Understand the basic Image Classification pipeline and the data-driven approach (train/predict stages) \n",
     "● Data fetching and understand the train/val/test splits \n",
     "● Implement and apply an optimal k-Nearest Neighbor (kNN) classifier\n",
